# mccv

./: .gitignore  CHANGELOG.md  COPYING  Cargo.toml  Makefile  README.md
benches/: vault_benchmark.rs
data/migrations/: 0001-initial.sql  0002-vault-version.sql
data/tests/: ctvhash.json
docs/: protocol.md  user-guide.md
docs/diagrams/: deposit.json  overview.json  style.css  withdrawal.json
examples/: README.md  approve-prompt.sh
src/: bip119.rs  cache.rs  chain.rs  lib.rs  main.rs  migrate.rs  storage.rs  test_util.rs  transaction.rs  vault.rs  vault_storage.rs  wallet.rs
tests/: test_vault.rs
