[package]
name = "mccv"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk_electrum = "0.20.0"
bdk_wallet = { version = "1.0.0-beta.5", features = ["rusqlite"] }
bitcoin = { version = "0.32", features = ["serde"] }
bitcoin_hashes = "0.15.0"
clap = { version = "4.5.21", features = ["derive"] }
rand = "0.8.5"
rayon = "1.10.0"
rusqlite = "0.31"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"

[dev-dependencies]
criterion = "0.5.1"
electrsd = { version = "0.29.0", features = ["legacy"] }
serde_json = "1.0.133"

[[bench]]
name = "vault_benchmark"
harness = false
