[package]
name = "mccv"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk_electrum = "0.23.0"
bdk_wallet = { version = "2.0.0", features = ["rusqlite"] }
bdk_bitcoind_rpc = { version = "0.20.0", optional = true }
bitcoin = { version = "0.32", features = ["serde"] }
bitcoin_hashes = "0.15.0"
clap = { version = "4.5.21", features = ["derive"] }
rand = "0.8.5"
rayon = "1.10.0"
rusqlite = "0.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133", optional = true }
toml = "0.8.19"

[features]
bitcoind = [ "bdk_bitcoind_rpc", "serde_json" ]

[dev-dependencies]
mccv = { path = ".", features = [ "bdk_bitcoind_rpc" ] }
criterion = "0.5.1"
serde_json = "1.0.133"
bdk_bitcoind_rpc = "0.20.0"
corepc-node = { version = "0.7.0", default-features = false, features = ["28_0"] }

[[bench]]
name = "vault_benchmark"
harness = false
